# atm-insights-backend

./: .gitignore  .isort.cfg  Dockerfile  MONITORING_SETUP_GUIDE.md  Makefile  README.md  REQUIREMENT.md  TELEGRAM_SETUP_GUIDE.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
atm-simulator/: Dockerfile  Makefile  config.py  run_migration.py  run_simulator.py  simulator.py
backend/: Dockerfile  README.md  alembic.ini  config.py  main.py  ml_reference.py  requirements.txt  train_models.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_create_atm_tables.py  0001_create_users_tables.py  0001_init_tables.py  0002_create_atm_tables.py  0002_create_atm_telemetry_table.py  (+6 more)
backend/api/: __init__.py
backend/const/: __init__.py  alert_rules.py
backend/database/: __init__.py  connection.py  models.py  session.py
backend/dependencies/: auth.py
backend/ml/: feature_engineering.py  model_training.py
backend/models/: __init__.py  alert.py  atm.py  atm_telemetry.py  user.py
backend/schemas/: __init__.py  alert.py  analytics.py  atm.py  auth.py  common.py  dashboard.py  predictions.py  telemetry.py
backend/services/: __init__.py  alert_service.py  analytics_service.py  auth_service.py  background_service.py  cache_service.py  dashboard_service.py  metrics_service.py  ml_service.py  notification_service.py  prediction_scheduler.py  telemetry_service.py  websocket_service.py
backend/tests/: test_notifications.py
backend/utils/: atm_utils.py
monitoring/prometheus/: prometheus.yml
scripts/: init-timescale.sql
(+16 files in other folders)
