[project]
name = "atm-insights"
version = "0.1.0"
description = "The backend of ATM Insights Trial Task"
authors = [{ name = "Lavendar Solution", email = "lavendarsolution@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastapi (>=0.115.12,<0.116.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"

